# e4pcs

./: README.md
source/: CMakeLists.txt  affine_invariant_rep.cpp  affine_invariant_representation.cpp  affine_invariant_representation.h  config.cfg  config.cpp  config.h  downsample.cpp  e4pcs.cpp  e4pcs.h  generate_transformation_matrix.cpp  get_similar_region.cpp  icp_test.cpp  icpnl_test.cpp  io.cpp  io.h  keypoint-test-config.cfg  keypoints_interface.cpp  keypoints_interface.h  ndt_test.cpp  partial_overlap.cpp  partial_overlap.h  pcd_to_ascii.cpp  region_growing_test.cpp  roughness_measure.cpp  roughness_measure.h  test_affine_invariant_rep.cpp  test_e4pcs.cpp  test_keypoint_interface.cpp  test_npcs.cpp  test_partial_overlap.cpp  test_pyramid_congruency.cpp  test_roughness_measure.cpp  test_sampling.cpp  transform_cloud.cpp  typedefs.h  visualize_output.cpp
